[package]
name = "gw-syscall-simluator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { git = "https://github.com/nervosnetwork/godwoken.git" }
gw-common = { git = "https://github.com/nervosnetwork/godwoken.git" }
gw-generator = { git = "https://github.com/nervosnetwork/godwoken.git" }
gw-traits = { git = "https://github.com/nervosnetwork/godwoken.git" }
ckb-vm = { version = "=0.21.3", features = ["detect-asm"] }
ckb-vm-definitions = "=0.21.3"
once_cell = "1.14.0"
anyhow = "1.0"
hex = "0.4"
